--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  
+  <meta property="og:title" content="Hi I'm Toby" />
+  <meta property="og:image" content="https://s.keepmeme.com/files/en_posts/20200825/389052dac5820aeb2660ed9fb1bc1c22cat-showing-middle-finger-meme.jpg" />
+  
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
